--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,10 +1,21 @@
 fastapi
 uvicorn[standard]
 python-multipart
-numpy
-opencv-python-headless
+
+# --- hard pins to avoid ABI breakages ---
+numpy==1.26.4
+opencv-python-headless==4.10.0.84
+
+# --- core ---
 insightface==0.7.3
 onnxruntime-gpu==1.18.1
+
+# --- GFPGAN stack (needs compatible torch/torchvision) ---
+torch==2.2.2+cu121
+torchvision==0.17.2+cu121
+torchaudio==2.2.2+cu121
+--index-url https://download.pytorch.org/whl/cu121
+
 gfpgan==1.3.8
 facexlib==0.3.0
 basicsr==1.4.2
